--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chat-server"
+name = "rust-hanashite"
 version = "0.1.0"
 authors = ["Peter Triller <ptriller@soapwars.de>"]
 edition = "2018"
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 tokio = { version = "0.3", features = [ "full" ] }
 bytes = "0.6.0"
+byteorder ="1.3.4"
+uuid = { version = "0.8.1", features = [ "v4" ] }
 tokio-util = { version = "0.5.0", features = [ "codec" ] }
 log = "0.4.11"
 
