--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -11,8 +11,13 @@ byteorder ="1.3.4"
 uuid = { version = "0.8.1", features = [ "v4" ] }
 tokio-util = { version = "0.5.0", features = [ "codec" ] }
 log = "0.4.11"
+quick-protobuf = "0.8.0"
 
 [dev-dependencies]
 hound = "3.4.0"
 audiopus = "0.2.0"
 sodiumoxide = "0.2.6"
+
+[build-dependencies]
+walkdir = "2.3.1"
+pb-rs = "0.9.1"
