--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -5,21 +5,22 @@ authors = ["Peter Triller <ptriller@soapwars.de>"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "0.3", features = [ "full" ] }
 bytes = "0.6.0"
-byteorder ="1.3.4"
-uuid = { version = "0.8.1", features = [ "v4" ] }
-tokio-util = { version = "0.5.0", features = [ "codec" ] }
-log = "0.4.11"
 quick-protobuf = "0.8.0"
+serde = "1.0.117"
+toml = "0.5.7"
 tracing = "0.1"
 tracing-subscriber = "0.2"
+tokio = { version = "0.3", features = [ "full" ] }
+tokio-util = { version = "0.5.0", features = [ "codec" ] }
+uuid = { version = "0.8.1", features = [ "v4" ] }
+
 
 [dev-dependencies]
-hound = "3.4.0"
 audiopus = "0.2.0"
+hound = "3.4.0"
 sodiumoxide = "0.2.6"
 
 [build-dependencies]
-walkdir = "2.3.1"
 pb-rs = "0.9.1"
+walkdir = "2.3.1"
