Experiments with client
Experimenting connecting to the Rust Client

--- a/go-hanashite/Makefile
+++ b/go-hanashite/Makefile
@@ -3,13 +3,15 @@ BUILD := $(shell git rev-parse --short HEAD)
 LDFLAGS= -X=main.Version=$(VERSION) -X=main.Build=$(BUILD)
 CHANGES := $(shell test -n "$$(git status --porcelain)" && echo '+CHANGES' || true)
 PROTOC_GEN_GO := $(GOPATH)/bin/protoc-gen-go
-TARGET := hanashite-cli
+
 
 OS := linux windows darwin
 ARCH := amd64
 
 build: vet lint
-	go build  -ldflags "$(LDFLAGS)" -o $(TARGET) cmd/go-hanashite-cli/main.go 
+	go build  -ldflags "$(LDFLAGS)" -o hanashite-cli cmd/go-hanashite-cli/main.go 
+	go build  -ldflags "$(LDFLAGS)" -o dbg-hanashite-client cmd/dbg-hanashite-client/main.go 
+	go build  -ldflags "$(LDFLAGS)" -o hanashite-server cmd/go-hanashite-server/main.go 
 	
 	#Cross compile wth CGO enabled requires to set up compilers and SDK's ... will do that later in a VM or container
 	#https://subscription.packtpub.com/book/application_development/9781789138412/app02/app02lvl1sec96/cross-compiling-for-macos-with-cgo
