--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2018"
 
 [dependencies]
 bytes = "0.6.0"
+futures = "0.3.8"
 quick-protobuf = "0.8.0"
 serde = "1.0.117"
 toml = "0.5.7"
 tracing = "0.1"
 tracing-subscriber = "0.2"
-tokio = { version = "0.3", features = [ "full" ] }
+tokio = { version = "0.3", features = [ "full", "io-util" ] }
 tokio-util = { version = "0.5.0", features = [ "codec" ] }
 uuid = { version = "0.8.1", features = [ "v4" ] }
 
