--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -12,6 +12,7 @@ serde = "1.0.117"
 toml = "0.5.7"
 tracing = "0.1"
 tracing-subscriber = "0.2"
+tracing-futures = "0.2.4"
 tokio = { version = "0.3", features = [ "full", "io-util" ] }
 tokio-util = { version = "0.5.0", features = [ "codec" ] }
 uuid = { version = "0.8.1", features = [ "v4" ] }
