make protoc build nice again

--- a/go-hanashite/Makefile
+++ b/go-hanashite/Makefile
@@ -3,16 +3,15 @@ BUILD := $(shell git rev-parse --short HEAD)
 LDFLAGS= -X=main.Version=$(VERSION) -X=main.Build=$(BUILD)
 CHANGES := $(shell test -n "$$(git status --porcelain)" && echo '+CHANGES' || true)
 PROTOC_GEN_GO := $(GOPATH)/bin/protoc-gen-go
-INPUT_PROTO=$(wildcard ../rust-server/protos/*.proto)
-OUTPUT_PROTO=$(patsubst ../rust-server/protos/%.proto,serialize/%.pb.go,$(INPUT_PROTO))
+
 
 OS := linux windows darwin
 ARCH := amd64
 
 build: vet lint
-	go build  -ldflags "$(LDFLAGS)" -o hanashite-cli cmd/go-hanashite-cli/main.go 
+	go build  -ldflags "$(LDFLAGS)" -o hanashite-cli cmd/go-hanashite-cli/main.go
 	#go build  -ldflags "$(LDFLAGS)" -o dbg-hanashite-client cmd/dbg-hanashite-client/main.go
-	go build  -ldflags "$(LDFLAGS)" -o hanashite-server cmd/go-hanashite-server/main.go 
+	go build  -ldflags "$(LDFLAGS)" -o hanashite-server cmd/go-hanashite-server/main.go
 
 #Cross compile wth CGO enabled requires to set up compilers and SDK's ... will do that later in a VM or container
 #https://subscription.packtpub.com/book/application_development/9781789138412/app02/app02lvl1sec96/cross-compiling-for-macos-with-cgo
@@ -31,20 +30,14 @@ lint:
 	golint ./...
 
 tools:
-	#go get -u github.com/mitchellh/gox
+#go get -u github.com/mitchellh/gox
 	go get -u golang.org/x/lint/golint
 	go install google.golang.org/protobuf/cmd/protoc-gen-go
 
-serialize/%.pb.go: ../rust-server/protos/%.proto always
-	$(eval TMP := $(shell mktemp -d))
-	$(eval PROTO_FILE :=  $(TMP)/$(shell basename $<))
-	cat  "$<" protos/han.proto >$(PROTO_FILE)
-	protoc -I=$(TMP) --go_out=serialize $(PROTO_FILE)
-	-rm -rf $(TMP)
+protoc:
+	protoc -I=../rust-server/protos --go_out=serialize ../rust-server/protos/hanmessage.proto
+	protoc -I=../rust-server/protos --go_out=serialize ../rust-server/protos/udpmessage.proto
 
 
-protoc: $(OUTPUT_PROTO)
 
-always:
-
-.PHONY: clean protoc always
+.PHONY: clean, protoc
