--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -12,13 +12,12 @@ toml = "0.5.7"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 tracing-futures = "0.2.4"
-tokio = { version = "0.3", features = [ "full", "io-util" ] }
-tokio-util = { version = "0.5.0", features = [ "codec" ] }
-uuid = { version = "0.8.1", features = [ "v4" ] }
+tokio = { version = "0.3", features = ["full", "io-util"] }
+tokio-util = { version = "0.5.0", features = ["codec"] }
+uuid = { version = "0.8.1", features = ["v4"] }
 prost = { git = "https://github.com/danburkert/prost" }
 
 [dev-dependencies]
 
 [build-dependencies]
-walkdir = "2.3.1"
-prost-build = "0.6.1"
+prost-build = { git = "https://github.com/danburkert/prost" }
