--- a/go-hanashite/Makefile
+++ b/go-hanashite/Makefile
@@ -10,8 +10,8 @@ ARCH := amd64
 
 build: vet lint
 	go build  -ldflags "$(LDFLAGS)" -o hanashite-cli cmd/go-hanashite-cli/main.go
-#go build  -ldflags "$(LDFLAGS)" -o dbg-hanashite-client cmd/dbg-hanashite-client/main.go
 	go build  -ldflags "$(LDFLAGS)" -o hanashite-server cmd/go-hanashite-server/main.go
+	go build  -ldflags "$(LDFLAGS)" -o hanashite-termui cmd/go-hanashite-termiu/main.go
 
 #Cross compile wth CGO enabled requires to set up compilers and SDK's ... will do that later in a VM or container
 #https://subscription.packtpub.com/book/application_development/9781789138412/app02/app02lvl1sec96/cross-compiling-for-macos-with-cgo
