--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -12,12 +12,13 @@ toml = "0.5.7"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 tracing-futures = "0.2.4"
-tokio = { version = "0.3", features = ["full", "io-util"] }
+tokio = { version = "0.3.4", features = ["full", "io-util"] }
 tokio-util = { version = "0.5.0", features = ["codec"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 prost = { git = "https://github.com/danburkert/prost" }
 
 [dev-dependencies]
+tokio-test = "0.3.0"
 
 [build-dependencies]
 prost-build = { git = "https://github.com/danburkert/prost" }
