--- a/rust-hanashite/hahashite-server/Cargo.toml
+++ b/rust-hanashite/hahashite-server/Cargo.toml
@@ -13,6 +13,7 @@ rand = "0.7.3"
 serde = "1.0.117"
 toml = "0.5.7"
 tracing = "0.1.22"
+async-trait = "0.1.42"
 tracing-subscriber = "0.2.15"
 tracing-futures = "0.2.4"
 tokio = { version = "0.3.4", features = ["full", "io-util"] }
