--- a/rust-hanashite/hahashite-server/Cargo.toml
+++ b/rust-hanashite/hahashite-server/Cargo.toml
@@ -6,26 +6,27 @@ edition = "2018"
 
 [dependencies]
 hanashite-message = { path = "../hanashite-message" }
-bytes = "0.6.0"
+bytes = "1.0.0"
 futures = "0.3.8"
 futures-sink = "0.3.8"
-rand = "0.7.3"
-serde = "1.0.117"
-toml = "0.5.7"
+rand = "0.8.1"
+serde = "1.0.118"
+toml = "0.5.8"
 tracing = "0.1.22"
 async-trait = "0.1.42"
 tracing-subscriber = "0.2.15"
 tracing-futures = "0.2.4"
-tokio = { version = "0.3.4", features = ["full", "io-util"] }
-tokio-util = { version = "0.5.0", features = ["codec"] }
+tokio = { version = "1.0.1", features = ["full", "io-util"] }
+tokio-stream = "0.1.1"
+tokio-util = { version = "0.6.0", features = ["codec"] }
 uuid = { version = "0.8.1", features = ["v4"] }
-prost = { git = "https://github.com/danburkert/prost" }
+prost = "0.7.0"
 sodiumoxide = "0.2.6"
 
 [dev-dependencies]
-tokio-test = "0.3.0"
-mockall = "0.8.3"
+tokio-test = "0.4.0"
+mockall = "0.9.0"
 assert_matches = "1.4.0"
 
 [build-dependencies]
-prost-build = { git = "https://github.com/danburkert/prost" }
+prost-build = "0.7.0"
