--- a/rust-hanashite/hahashite-server/Cargo.toml
+++ b/rust-hanashite/hahashite-server/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2018"
 [dependencies]
 hanashite-message = { path = "../hanashite-message" }
 bytes = "1.0.0"
-futures = "0.3.8"
-futures-sink = "0.3.8"
-rand = "0.8.1"
-serde = "1.0.118"
+futures = "0.3.9"
+futures-sink = "0.3.9"
+serde = { version = "1.0.118", features = ["derive"] }
 toml = "0.5.8"
 tracing = "0.1.22"
 async-trait = "0.1.42"
