--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -5,20 +5,20 @@ authors = ["Peter Triller <ptriller@soapwars.de>"]
 edition = "2018"
 
 [dependencies]
-bytes = "0.6.0"
-futures = "0.3.8"
-serde = "1.0.117"
-toml = "0.5.7"
-tracing = "0.1"
-tracing-subscriber = "0.2"
-tracing-futures = "0.2.4"
-tokio = { version = "0.3.4", features = ["full", "io-util"] }
-tokio-util = { version = "0.5.0", features = ["codec"] }
-uuid = { version = "0.8.1", features = ["v4"] }
-prost = { git = "https://github.com/danburkert/prost" }
+bytes = "1.1.0"
+futures = "0.3.21"
+serde = "1.0.138"
+toml = "0.5.9"
+tracing = "0.1.35"
+tracing-subscriber = "0.3.14"
+tracing-futures = "0.2.5"
+tokio = { version = "1.19.2", features = ["full", "io-util"] }
+tokio-util = { version = "0.7.3", features = ["codec"] }
+uuid = { version = "1.1.2", features = ["v4"] }
+prost = "0.10.4"
 
 [dev-dependencies]
-tokio-test = "0.3.0"
+tokio-test = "0.4.2"
 
 [build-dependencies]
-prost-build = { git = "https://github.com/danburkert/prost" }
+prost-build = "0.10.4"
